fix: fight modal z-index

--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10;
+  z-index: 100;
   width: 40%;
   background-color: #444;
   display: none;
